[package]
name = "ecma-119"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
fallible-iterator.workspace = true
bitflags.workspace = true
zerocopy = { version = "0.8.39", default-features = false, features = ["derive"] }
blake3 = { version  = "1.8.4", features = ["rayon", "mmap"], optional = true }

[dev-dependencies]
memmap2 = "0.9.10"
rand = { workspace = true, default-features = true }

[features]
default = []
build = ["zerocopy/std", "anyhow/std", "dep:blake3"]

[lints]
workspace = true
