[package]
name = "fiber"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# 3rd-party dependencies
cfg-if.workspace = true

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.172" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
] }

[target.'cfg(target_os = "none")'.dependencies]
panic-unwind.workspace = true

[target.'cfg(any(target_arch = "riscv64", target_arch = "riscv32"))'.dependencies]
riscv.workspace = true

[dev-dependencies]
criterion = "0.5.1"

# criterion-cycles-per-byte only supports x86.
[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dev-dependencies]
criterion-cycles-per-byte = "0.6.1"

[package.metadata.docs.rs]
all-features = true
targets = [
    # hosted targets
    "riscv64gc-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    # no_std targets
    "riscv64gc-unknown-none-elf",
]

[features]

[[bench]]
name = "fiber"
harness = false

[lints]
workspace = true
