[package]
name = "gimli"
version.workspace = true
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "parser-implementations",
]
description = "A library for reading and writing the DWARF debugging format."
documentation = "https://docs.rs/gimli"
edition.workspace = true
include = [
    "/CHANGELOG.md",
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src",
]
keywords = ["DWARF", "debug", "ELF", "eh_frame"]
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
indexmap = { version = "2.2.6", optional = true, default-features = false }
hashbrown.workspace = true
fxhash.workspace = true

[dev-dependencies]
test-assembler = "0.1.6"

[features]
read-core = []
read = ["read-core"]
#read-all = ["read", "fallible-iterator", "endian-reader"]
#endian-reader = ["read", "dep:stable_deref_trait"]
write = ["dep:indexmap"]
