[package]
name = "kasync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bench]]
name = "spawn"
harness = false

[[bench]]
name = "ping_pong"
harness = false

[dependencies]
util.workspace = true
spin.workspace = true
mpsc-queue.workspace = true
cpu-local.workspace = true
fastrand.workspace = true
unwind2 = { workspace = true, optional = true }
panic-unwind2 = { workspace = true, optional = true }

# 3rd-party dependencies
cfg-if.workspace = true
static_assertions.workspace = true
mycelium-bitfield.workspace = true
tracing.workspace = true
bitflags.workspace = true
pin-project.workspace = true
arrayvec.workspace = true
cordyceps.workspace = true

[dev-dependencies]
tracing-subscriber = { workspace = true, default-features = true, features = ["env-filter"] }
lazy_static.workspace = true
criterion.workspace = true
tokio-test = "0.4.4"
futures = "0.3.31"

[target.'cfg(loom)'.dependencies]
loom.workspace = true

[features]
unwind2 = ["dep:unwind2"]
counters = []
__bench = ["tracing/max_level_off"]

[lints]
workspace = true
