[package]
name = "kasync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bench]]
required-features = ["__bench"]
name = "spawn"
harness = false

[dependencies]
util.workspace = true
cpu-local.workspace = true
spin.workspace = true
kfastrand.workspace = true
panic-unwind2 = { workspace = true, optional = true }
cordyceps.workspace = true

# 3rd-party dependencies
static_assertions.workspace = true
cfg-if.workspace = true
mycelium-bitfield.workspace = true
tracing.workspace = true
bitflags.workspace = true
arrayvec.workspace = true
pin-project.workspace = true
futures = { workspace = true, default-features = false }

[dev-dependencies]
tracing-subscriber = { workspace = true, default-features = true, features = ["env-filter"] }
lazy_static.workspace = true
criterion.workspace = true
futures = { workspace = true, features = ["alloc"] }

[target.'cfg(loom)'.dependencies]
loom.workspace = true

[features]
unwind2 = ["dep:panic-unwind2"]
counters = []
__bench = ["tracing/max_level_off"]

[lints]
workspace = true
