[package]
name = "kasync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bench]]
required-features = ["__bench"]
name = "spawn"
harness = false

[dependencies]
k32-util.workspace = true
k23-cpu-local.workspace = true
k23-spin.workspace = true
k23-fastrand.workspace = true
k23-panic-unwind = { workspace = true, optional = true }
cordyceps.workspace = true
k23-arrayvec.workspace = true

# 3rd-party dependencies
static_assertions.workspace = true
cfg-if.workspace = true
mycelium-bitfield.workspace = true
tracing.workspace = true
bitflags.workspace = true
pin-project.workspace = true
futures = { workspace = true, default-features = false }

[dev-dependencies]
tracing-subscriber = { workspace = true, default-features = true, features = [
  "env-filter",
] }
lazy_static.workspace = true
criterion.workspace = true
futures = { workspace = true, features = ["alloc"] }
kasync = { workspace = true, features = ["counters"] }

[target.'cfg(loom)'.dependencies]
loom.workspace = true

[features]
k23-unwind = ["dep:k23-panic-unwind"]
counters = []
__bench = ["tracing/max_level_off"]

[lints]
workspace = true
