[package]
name = "kasync2"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bench]]
required-features = ["__bench"]
name = "spawn"
harness = false

[dependencies]
util.workspace = true
cpu-local.workspace = true
spin.workspace = true
fastrand.workspace = true
linked-list.workspace = true
#mpsc-queue.workspace = true
unwind2 = { workspace = true, optional = true }

# 3rd-party dependencies
static_assertions.workspace = true
cfg-if.workspace = true
mycelium-bitfield.workspace = true
tracing.workspace = true
bitflags.workspace = true
arrayvec.workspace = true
pin-project-lite.workspace = true
futures = { workspace = true, default-features = false }
cordyceps = "0.3.4"

[dev-dependencies]
tracing-subscriber = { workspace = true, default-features = true, features = ["env-filter"] }
lazy_static.workspace = true
criterion.workspace = true
futures = { workspace = true, features = ["alloc"] }

[target.'cfg(loom)'.dependencies]
loom.workspace = true

[features]
unwind2 = ["dep:unwind2"]
__bench = ["tracing/max_level_off"]

[lints]
workspace = true
