[package]
name = "kbacktrace"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
unwind2.workspace = true
gimli.workspace = true
kaddr2line.workspace = true
xmas-elf.workspace = true
rustc-demangle.workspace = true
fallible-iterator.workspace = true
arrayvec.workspace = true
