[package]
name = "kmem"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
arrayvec.workspace = true
riscv.workspace = true
cpu-local = { workspace = true, optional = true }
spin = { workspace = true, optional = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }

# 3rd-party dependencies
mycelium-bitfield.workspace = true
fallible-iterator.workspace = true
log.workspace = true
lock_api.workspace = true

[dev-dependencies]
parking_lot = "0.12.5"
kmem = { workspace = true, features = ["test_utils"] }
bitflags.workspace = true

[features]
test_utils = ["cpu-local", "spin", "proptest", "proptest-derive"]

[lints]
workspace = true
