[package]
name = "kmem"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
k23-arrayvec.workspace = true
k23-riscv.workspace = true
k23-cpu-local = { workspace = true, optional = true }
k23-spin = { workspace = true, optional = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
parking_lot = { version = "0.12.5", optional = true }

# 3rd-party dependencies
mycelium-bitfield.workspace = true
log.workspace = true
lock_api.workspace = true

[dev-dependencies]
kmem = { workspace = true, features = ["test_utils"] }
test-log = "0.2.19"

[features]
test_utils = ["k23-cpu-local", "k23-spin", "proptest", "proptest-derive", "parking_lot"]

[lints]
workspace = true
